--- a/packages/animated/package.json
+++ b/packages/animated/package.json
@@ -32,6 +32,6 @@
     "@react-spring/types": "~10.0.0-alpha.0"
   },
   "peerDependencies": {
-    "react": "^16.8.0  || ^17.0.0"
+    "react": "^16.8.0  || ^17.0.0 || ^18.0.0"
   }
 }
