--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,7 +35,7 @@
     "@react-spring/types": "~10.0.0-alpha.0"
   },
   "peerDependencies": {
-    "react": "^16.8.0  || ^17.0.0"
+    "react": "^16.8.0  || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
     "@react-spring/rafz": "~10.0.0-alpha.0"
