--- a/packages/parallax/package.json
+++ b/packages/parallax/package.json
@@ -31,6 +31,6 @@
     "@react-spring/web": "~10.0.0-alpha.0"
   },
   "peerDependencies": {
-    "react": "^16.8.0  || ^17.0.0"
+    "react": "^16.8.0  || ^17.0.0 || ^18.0.0"
   }
 }
