--- a/targets/web/package.json
+++ b/targets/web/package.json
@@ -33,7 +33,7 @@
     "@react-spring/types": "~10.0.0-alpha.0"
   },
   "peerDependencies": {
-    "react": "^16.8.0  || ^17.0.0",
-    "react-dom": "^16.8.0  || ^17.0.0"
+    "react": "^16.8.0  || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0  || ^17.0.0 || ^18.0.0"
   }
 }
